// Copyright 2023 Ant Group Co., Ltd.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package secretflow.kuscia;

option java_package = "org.secretflow.proto.kuscia";

import "secretflow/protos/component/cluster.proto";
import "secretflow/protos/pipeline/pipeline.proto";
import "secretflow/protos/pipeline/task_config.proto";

message TaskInputConfig {
  map<string, DatasourceConfig> sf_datasource_config = 1;
  secretflow.component.SFClusterDesc sf_cluster_desc = 2;
  secretflow.pipeline.NodeDef sf_node_eval_param = 3;
  repeated string sf_output_uris = 4;
  repeated string sf_input_ids = 5;
  repeated string sf_output_ids = 6;
  secretflow.pipeline.TaskConfig tee_task_config = 7;
}

message DatasourceConfig {
  string id = 1;
}