// Copyright 2023 Ant Group Co., Ltd.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package secretflow.pipeline;

option java_package = "org.secretflow.proto.pipeline";

message TaskConfig {
  // task_initiator_id
  string task_initiator_id = 1;
  
  // kuscia： {project_id}
  // local： "default"
  string scope = 2;

  // base64
  string task_body = 3;

  //  task_initiator_id || . || scope || . || task_body 的sign
  string signature = 20;

  //   * RS256: RSASSA-PKCS1-v1_5 using SHA-256
  //   * ES256: ECDSA using P-256 and SHA-256
  string sign_algorithm = 21;

  // cert chain
  repeated string task_initiator_certs = 22;

  // capsule manager service
  string capsule_manager_endpoint = 23;
}